<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:filterTouchesWhenObscured="true">

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/update_application"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="end|center_vertical">

        <TextView
            android:id="@+id/cancel_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="#43c38c"
            fontPath="@string/bold_font_path"/>

        <TextView
            android:id="@+id/download_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/confirm"
            android:textColor="#43c38c"
            fontPath="@string/bold_font_path"/>
    </LinearLayout>
</LinearLayout>
