<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fadeScrollbars="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/onboard_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/onboarding1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/onboard_textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/title_onboarding1"
                android:textColor="#000000"
                android:textSize="26sp"
                fontPath="@string/bold_font_path"/>

            <TextView
                android:id="@+id/onboard_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_activity_onboarding1"
                android:textColor="#000000"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>