<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="16dp">

        <TextView
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/reports_near_you"
                android:text="@string/reports_near_you"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/reports_near_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:theme="@style/Checkbox"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/reports_near_saved"
                android:text="@string/reports_near_your_saved_locations"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/reports_near_saved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:theme="@style/Checkbox"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorSecondaryText"/>

        <TextView
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_tools"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/proxy"
                android:text="@string/proxy"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@id/proxy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:theme="@style/Checkbox"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorSecondaryText"/>

        <TextView
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uninstall"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/uninstall"
                android:text="@string/uninstall_in_menu"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@id/uninstall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:theme="@style/Checkbox"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
