<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#c1000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="2">

        <ImageView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:src="@drawable/boardinglocation"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/location_permission"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom_container_onboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_request_location"
            style="@style/BaseBorderlessFilterButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/allow"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/button_skip_location"
            style="@style/BaseBorderlessFilterButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/later"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
