<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:id="@+id/spacing"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@android:color/transparent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:id="@+id/report_saved"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:layout_margin="8dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#43c38c"
            android:visibility="gone"
            android:clickable="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/report_saved"
                android:textColor="#FFFFFF"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/report_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBackground"/>

            <LinearLayout
                android:id="@+id/report_detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

                <include layout="@layout/item_report_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_verify_delete_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:padding="8dip">

                <Button
                    android:id="@+id/button_save"
                    style="@style/RoundedButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/save_selector"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/button_share"
                    style="@style/RoundedButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/share"
                    android:text="@string/share" />

                <Button
                    android:id="@+id/button_verify"
                    style="@style/RoundedButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/report_selector"
                    android:text="@string/verify" />

                <Button
                    android:id="@+id/button_delete"
                    style="@style/RoundedButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/delete"
                    android:text="@string/delete" />
            </LinearLayout>
        </LinearLayout>
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <RelativeLayout
                        android:id="@+id/description_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/options"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/overflow"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="5dp"
                            android:text="@string/my_details"
                            android:textColor="@android:color/black"
                            fontPath="@string/bold_font_path"/>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text=""/>
                </LinearLayout>

                <TextView
                    android:id="@+id/report_info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/reports_here"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    fontPath="@string/bold_font_path"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/report_details_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>
</LinearLayout>
