<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:filterTouchesWhenObscured="true">
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/form_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/submit_feedback">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <EditText
                android:id="@+id/explanation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:gravity="right"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:maxLength="512"
                android:hint="@string/details_you_observed"
                android:inputType="textEmailAddress|textMultiLine"
                android:imeOptions="flagNoFullscreen"
                android:scrollHorizontally="false"
                fontPath="fonts/IRANSans_Edit.ttf"/>

            <TextView
                android:id="@+id/explanation_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_is_required"
                android:textColor="#ef2405"
                android:textSize="12sp"
                android:visibility="gone"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <TextView
        android:id="@+id/submit_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/submit"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</RelativeLayout>